Auto commit on 2025-08-19 08:43:30